Refactor code structure for improved readability and maintainability

--- a/events.html
+++ b/events.html
@@ -73,42 +73,34 @@
         </h2>
 
         <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-          <!-- Event Card Template -->
           <div
             class="bg-blue-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/hackathon-poster.jpg"
-              alt="Hackathon 2025 Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/quiz-ph0nic.webp"
+              alt="Tech Quiz Poster"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2 text-blue-700">
-                Hackathon 2025
+          QuizPh0nic
               </h3>
-              <p class="text-gray-800">
-                A 24-hour coding marathon. Solve real-world problems and win
-                exciting prizes.
-              </p>
+              <p class="text-gray-800">Sync Your Mind to the Quiz Beat</p>
             </div>
           </div>
-
           <div
             class="bg-purple-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/techtalk-poster.jpg"
-              alt="Tech Talk Series Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/webdevarena.jpg"
+              alt="webdev-arena"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2 text-purple-700">
-                Tech Talk Series
+          WebDev Arena 2025
               </h3>
-              <p class="text-gray-800">
-                Guest speakers from the industry share insights on emerging tech
-                trends.
-              </p>
+              <p class="text-gray-800">Where Innovation Meets Interface</p>
             </div>
           </div>
 
@@ -116,36 +108,35 @@
             class="bg-green-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/ai-workshop.jpg"
-              alt="AI Workshop Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/gitsync.jpeg"
+              alt="Git-Sync"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2 text-green-700">
-                AI & ML Workshop
+          Git-Sync
               </h3>
               <p class="text-gray-800">
-                Hands-on introduction to artificial intelligence and machine
-                learning tools.
+          Simplifying Version Control with GitHub
               </p>
             </div>
           </div>
 
           <div
-            class="bg-yellow-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+            class="bg-pink-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/cybersecurity-bootcamp.jpg"
-              alt="Cybersecurity Bootcamp Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/freshmen-induction.jpeg"
+              alt="Freshman-induction"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2 text-yellow-700">
-                Cybersecurity Bootcamp
+              <h3 class="text-xl font-semibold mb-2 text-pink-700"></h3>
+          Freshman Induction
               </h3>
               <p class="text-gray-800">
-                Learn about ethical hacking, online threats, and securing your
-                digital identity.
+          Learn from industry experts, gain essential skills, and network
+          ✨
               </p>
             </div>
           </div>
@@ -154,17 +145,53 @@
             class="bg-red-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/gamedev-jam.jpg"
-              alt="GameDev Jam Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/technomela.jpeg"
+              alt="technomela"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2 text-red-700">
-                GameDev Jam
+          Hit The Bulls Eye
               </h3>
               <p class="text-gray-800">
-                Collaborate and create games in 48 hours. All skill levels
-                welcome!
+          Sharpen your mind in this thrilling tech quiz with a twist of
+          fun!
+              </p>
+            </div>
+          </div>
+          <div
+            class="bg-yellow-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+          >
+            <img
+              src="./assets/images/events/workshop-cyber.jpeg"
+              alt="workshop-cyber"
+              class="w-full h-auto object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2 text-yellow-700">
+          Cyber Security Workshop
+              </h3>
+              <p class="text-gray-800">
+          Unravel the mysteries of cybersecurity and protect your digital
+          world.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="bg-teal-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+          >
+            <img
+              src="./assets/images/events/workshop-govtjob.jpeg"
+              alt="workshop-govtjob"
+              class="w-full h-auto object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2 text-teal-700">
+          Secure Your Dream Govt Job
+              </h3>
+              <p class="text-gray-800">
+          Govt Job Goals? We’ve Got You Covered!
               </p>
             </div>
           </div>
@@ -173,176 +200,39 @@
             class="bg-indigo-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
           >
             <img
-              src="./assets/images/events/tech-quiz.jpg"
-              alt="Tech Quiz Poster"
-              class="w-full h-48 object-cover"
+              src="./assets/images/events/workshop-devops.jpeg"
+              alt="workshop-devops"
+              class="w-full h-auto object-cover"
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-                Tech Quiz 2025
+          DevOps Workshop
               </h3>
               <p class="text-gray-800">
-                Test your knowledge on tech topics and win goodies.
+          Learn continuous integration, delivery, and automation to
+          revolutionize software development.
               </p>
             </div>
           </div>
+
           <div
-          class="bg-indigo-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
-        >
-          <img
-            src="./assets/images/events/webdev-arena.jpg"
-            alt="webdev-arena"
-            class="w-full h-48 object-cover"
-          />
-          <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-              WebDev Arena 2025
-            </h3>
-            <p class="text-gray-800">
-              A competition for making a creative UI.
-            </p>
+            class="bg-orange-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+          >
+            <img
+              src="./assets/images/events/workshop-ethical.jpeg"
+              alt="workshop-govtjob"
+              class="w-full h-auto object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2 text-orange-700">
+          Ethical Hacking Workshop
+              </h3>
+              <p class="text-gray-800">
+          Uncover the secrets of ethical hacking and secure your digital
+          world.
+              </p>
+            </div>
           </div>
-        </div>
-
-        <div
-        class="bg-emarald-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
-      >
-        <img
-          src="./assets/images/events/Git-Sync.jpg"
-          alt="Git-Sync"
-          class="w-full h-48 object-cover"
-        />
-        <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-            Git-Sync
-          </h3>
-          <p class="text-gray-800">
-            A seminar for simplifying Version control system.
-          </p>
-        </div>
-      </div>
-
-      <div
-      class="bg-pink-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
-    >
-      <img
-        src="./assets/images/events/Freshman-induction.jpg"
-        alt="Freshman-induction"
-        class="w-full h-48 object-cover"
-      />
-      <div class="p-6">
-        <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-          Freshman Induction
-        </h3>
-        <p class="text-gray-800">
-          Learn from industry experts, gain essential skills, and network ✨
-        </p>
-      </div>
-    </div>
-
-    <div
-    class="bg-red-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
-  >
-    <img
-      src="./assets/images/events/technomela.jpg"
-      alt="technomela"
-      class="w-full h-48 object-cover"
-    />
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-        Hit The Bulls Eye.
-      </h3>
-      <p class="text-gray-800">
-        Sharpen your mind in this thrilling tech quiz with a twist of fun!
-      </p>
-    </div>
-  </div>
-
-  <div
-  class="bg-green-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
->
-  <img
-    src="./assets/images/events/workshop.jpg"
-    alt="workshop-govtjob"
-    class="w-full h-48 object-cover"
-  />
-  <div class="p-6">
-    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-      Secure Your Dream Govt Job.
-    </h3>
-    <p class="text-gray-800">
-      Govt Job Goals? We’ve Got You Covered!
-    </p>
-  </div>
-</div>
-<div
-  class="bg-blue-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
->
-  <img
-    src="./assets/images/events/workshop-devops.jpg"
-    alt="workshop-devops"
-    class="w-full h-48 object-cover"
-  />
-  <div class="p-6">
-    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-      DevOPS Workskhop.
-    </h3>
-    <p class="text-gray-800">
-      Learn continuous integration, delivery, and automation to revolutionize software development.
-    </p>
-  </div>
-</div>
-<div
-  class="bg-rose-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
->
-  <img
-    src="./assets/images/events/Alumuni-Sportlight.jpg"
-    alt="Alumuni-Sportlight"
-    class="w-full h-48 object-cover"
-  />
-  <div class="p-6">
-    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-      Alumuni-Sportlight
-    </h3>
-    <p class="text-gray-800">
-      Gain insights, inspiration, and reconnect with fellow alumni.
-    </p>
-  </div>
-</div>
-<div
-  class="bg-red-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
->
-  <img
-    src="./assets/images/events/ODE-TO-CODE.jpg"
-    alt="ODE-TO-CODE"
-    class="w-full h-48 object-cover"
-  />
-  <div class="p-6">
-    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-      ODE-TO-CODE.
-    </h3>
-    <p class="text-gray-800">
-      Coding competition and compete against some of the brightest minds and win exciting prizes.
-    </p>
-  </div>
-</div>
-<div
-  class="bg-yellow-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
->
-  <img
-    src="./assets/images/events/OS-Workshop.jpg"
-    alt="OS-Workshop"
-    class="w-full h-48 object-cover"
-  />
-  <div class="p-6">
-    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
-      OS Workskhop.
-    </h3>
-    <p class="text-gray-800">
-      Dive deep into the core of Operating Systems—processes, memory, and more!.
-    </p>
-  </div>
-</div>
         </div>
       </div>
     </section>
