--- a/members.html
+++ b/members.html
@@ -186,8 +186,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Taranpreet Kaur</h3>
             <p class="text-gray-600">Social Media Head</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/taranpreet-kaur-a75aa6287/" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/TaranpreetKaur005" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
