--- a/members.html
+++ b/members.html
@@ -114,8 +114,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Simarjot Singh</h3>
             <p class="text-gray-600">Co-Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/simarjot-singh-a65b08261" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/singhsimarjot13" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
@@ -136,8 +136,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Harsh Kapoor</h3>
             <p class="text-gray-600">Secretary</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/harshskapooor108/" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Kapoor108" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -166,8 +166,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Parkhi Gupta</h3>
             <p class="text-gray-600">Content Head</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/parkhi-gupta-aa902b311" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Parkhigupta21" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
