Update social links for members and enhance link behavior with hover effects

--- a/members.html
+++ b/members.html
@@ -102,8 +102,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Ashmeet Kaur</h3>
             <p class="text-gray-600">Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/ashmeet-kaur-b5180628b" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Ashmeet-24" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
@@ -114,8 +114,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Simarjot Singh</h3>
             <p class="text-gray-600">Co-Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/simarjot-singh-a65b08261" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/singhsimarjot13" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/simarjot-singh-a65b08261" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/singhsimarjot13" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
@@ -126,8 +126,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Abhishek</h3>
             <p class="text-gray-600">Public Relations Officer</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/abhishek-abhishek-b411602a5" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Abhis84" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -136,8 +136,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Harsh Kapoor</h3>
             <p class="text-gray-600">Secretary</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/harshskapooor108/" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Kapoor108" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/harshskapooor108/" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Kapoor108" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -146,8 +146,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Arshdeep Kaur</h3>
             <p class="text-gray-600">Human Resources</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/arshdeep-kaur-8b0a73260" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Arsh-deep2005" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/arshdeep-kaur-8b0a73260" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Arsh-deep2005" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -156,8 +156,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Priyanshu</h3>
             <p class="text-gray-600">Creative Head</p>
             <div class="mt-3 space-x-3">
-              <a href="http://www.linkedin.com/in/priyanshu936" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/secuRaven" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="http://www.linkedin.com/in/priyanshu936" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/secuRaven" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -166,8 +166,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Parkhi Gupta</h3>
             <p class="text-gray-600">Content Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/parkhi-gupta-aa902b311" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Parkhigupta21" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/parkhi-gupta-aa902b311" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Parkhigupta21" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -176,8 +176,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Saarvi Sachdeva</h3>
             <p class="text-gray-600">Event Management Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/saarvi-sachdeva-677800287" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/saarvi35" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/saarvi-sachdeva-677800287" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/saarvi35" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -186,8 +186,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Taranpreet Kaur</h3>
             <p class="text-gray-600">Social Media Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/taranpreet-kaur-a75aa6287/" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/TaranpreetKaur005" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/taranpreet-kaur-a75aa6287/" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/TaranpreetKaur005" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -196,8 +196,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Brahamjot Singh</h3>
             <p class="text-gray-600">Technical Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://linkedin.com/in/brahamjotsingh" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/brahamjot04" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://linkedin.com/in/brahamjotsingh" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/brahamjot04" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -206,8 +206,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Jasmeet Kaur</h3>
             <p class="text-gray-600">Database Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/jasmeet-kaur-3243b3312" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/jasmeetkaur73" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/jasmeet-kaur-3243b3312" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasmeetkaur73" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -216,8 +216,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Jasnoor Kaur</h3>
             <p class="text-gray-600">Software Development Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/jasnoor-kaur-8b7226319" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/jasnooraulakh1" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/jasnoor-kaur-8b7226319" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasnooraulakh1" class="social-link text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -258,6 +258,19 @@
 
         $("#footer-placeholder").load("./assets/layouts/footer.html");
       });
+    </script>
+    <script>
+      const links = document.querySelectorAll(".social-link");
+      for (let i=0; i < links.length; i++) {
+        links[i].addEventListener("mouseover", function () {
+          this.style.color = "#2563eb"; // Change to blue on hover
+        });
+        links[i].addEventListener("mouseout", function () {
+          this.style.color = ""; // Reset to original color
+        });
+        links[i].setAttribute("target", "_blank"); // Open in new tab
+        links[i].setAttribute("rel", "noopener noreferrer"); // Security best practice
+      }
     </script>
   </body>
 
