--- a/members.html
+++ b/members.html
@@ -57,6 +57,7 @@
           The driving force behind the ITIAN Club – passionate, curious, and
           ready to innovate.
         </p>
+        </div>
       </div>
     </section>
 
@@ -102,8 +103,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Ashmeet Kaur</h3>
             <p class="text-gray-600">Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/ashmeet-kaur-b5180628b" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Ashmeet-24" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/ashmeet-kaur-b5180628b" class="text-blue-500 hover:text-blue-700 social-link" title="Ashmeet Kaur LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Ashmeet-24" class="text-gray-600 hover:text-gray-800 social-link" title="Ashmeet Kaur GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
@@ -114,8 +115,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Simarjot Singh</h3>
             <p class="text-gray-600">Co-Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/simarjot-singh-a65b08261" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/singhsimarjot13" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/simarjot-singh-a65b08261" class="text-blue-500 hover:text-blue-700 social-link" title="Simarjot Singh LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/singhsimarjot13" class="text-gray-600 hover:text-gray-800 social-link" title="Simarjot Singh GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
@@ -126,8 +127,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Abhishek</h3>
             <p class="text-gray-600">Public Relations Officer</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/abhishek-abhishek-b411602a5" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Abhis84" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/abhishek-abhishek-b411602a5" class="social-link text-blue-500 hover:text-blue-700" title="Abhishek LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Abhis84" class="text-gray-600 hover:text-gray-800 social-link" title="Abhishek GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -136,8 +137,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Harsh Kapoor</h3>
             <p class="text-gray-600">Secretary</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/harshskapooor108/" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Kapoor108" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/harshskapooor108/" class="text-blue-500 hover:text-blue-700 social-link" title="Harsh Kapoor LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Kapoor108" class="text-gray-600 hover:text-gray-800 social-link" title="Harsh Kapoor GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -146,12 +147,12 @@
             <h3 class="text-xl font-semibold text-blue-700">Arshdeep Kaur</h3>
             <p class="text-gray-600">Human Resources</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/arshdeep-kaur-8b0a73260" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Arsh-deep2005" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/arshdeep-kaur-8b0a73260" class="text-blue-500 hover:text-blue-700 social-link" title="Arshdeep Kaur LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Arsh-deep2005" class="text-gray-600 hover:text-gray-800 social-link" title="Arshdeep Kaur GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
-            <img src="./assets/images/members/priyanshu.jpg" alt="Member 6"
+            <img src="./assets/images/members/priyanshu.png" alt="Member 6"
               class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
             <h3 class="text-xl font-semibold text-blue-700">Priyanshu</h3>
             <p class="text-gray-600">Creative Head</p>
