--- a/members.html
+++ b/members.html
@@ -86,6 +86,7 @@
             <p class="text-gray-500 text-sm mt-2">Faculty Incharge</p>
           </div>
         </div>
+      </div>
     </section>
 
     <!-- Members Section -->
@@ -157,8 +158,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Priyanshu</h3>
             <p class="text-gray-600">Creative Head</p>
             <div class="mt-3 space-x-3">
-              <a href="http://www.linkedin.com/in/priyanshu936" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/secuRaven" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="http://www.linkedin.com/in/priyanshu936" class="text-blue-500 hover:text-blue-700 social-link" title="Priyanshu LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/secuRaven" class="text-gray-600 hover:text-gray-800 social-link" title="Priyanshu GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -167,8 +168,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Parkhi Gupta</h3>
             <p class="text-gray-600">Content Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/parkhi-gupta-aa902b311" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/Parkhigupta21" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/parkhi-gupta-aa902b311" class="text-blue-500 hover:text-blue-700 social-link" title="Parkhi Gupta LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Parkhigupta21" class="text-gray-600 hover:text-gray-800 social-link" title="Parkhi Gupta GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -177,8 +178,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Saarvi Sachdeva</h3>
             <p class="text-gray-600">Event Management Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/saarvi-sachdeva-677800287" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/saarvi35" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/saarvi-sachdeva-677800287" class="text-blue-500 hover:text-blue-700 social-link" title="Saarvi Sachdeva LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/saarvi35" class="text-gray-600 hover:text-gray-800 social-link" title="Saarvi Sachdeva GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -187,8 +188,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Taranpreet Kaur</h3>
             <p class="text-gray-600">Social Media Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/taranpreet-kaur-a75aa6287/" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/TaranpreetKaur005" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/taranpreet-kaur-a75aa6287/" class="text-blue-500 hover:text-blue-700 social-link" title="Taranpreet Kaur LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/TaranpreetKaur005" class="text-gray-600 hover:text-gray-800 social-link" title="Taranpreet Kaur GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -197,8 +198,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Brahamjot Singh</h3>
             <p class="text-gray-600">Technical Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://linkedin.com/in/brahamjotsingh" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/brahamjot04" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://linkedin.com/in/brahamjotsingh" class="social-link text-blue-500 hover:text-blue-700" title="Brahamjot Singh LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/brahamjot04" class="text-gray-600 hover:text-gray-800 social-link" title="Brahamjot Singh GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -207,8 +208,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Jasmeet Kaur</h3>
             <p class="text-gray-600">Database Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/jasmeet-kaur-3243b3312" class="social-link text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/jasmeetkaur73" class="text-gray-600 hover:text-gray-800 social-link"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/jasmeet-kaur-3243b3312" class="social-link text-blue-500 hover:text-blue-700" title="Jasmeet Kaur LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasmeetkaur73" class="text-gray-600 hover:text-gray-800 social-link" title="Jasmeet Kaur GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -217,8 +218,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Jasnoor Kaur</h3>
             <p class="text-gray-600">Software Development Head</p>
             <div class="mt-3 space-x-3">
-              <a href="https://www.linkedin.com/in/jasnoor-kaur-8b7226319" class="text-blue-500 hover:text-blue-700 social-link"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/jasnooraulakh1" class="social-link text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/jasnoor-kaur-8b7226319" class="text-blue-500 hover:text-blue-700 social-link" title="Jasnoor Kaur LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasnooraulakh1" class="social-link text-gray-600 hover:text-gray-800" title="Jasnoor Kaur GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
@@ -227,8 +228,8 @@
             <h3 class="text-xl font-semibold text-blue-700">Harmanpreet Singh</h3>
             <p class="text-gray-600">Discipline Head</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+              <a href="#" class="text-blue-500 hover:text-blue-700" title="Harmanpreet Singh LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800" title="Harmanpreet Singh GitHub"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
