--- a/members.html
+++ b/members.html
@@ -79,9 +79,9 @@
 
           <!-- Faculty Card 2 -->
           <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
-            <img src="./assets/images/faculty/Harminder.jpg" alt="Faculty 2"
+            <img src="./assets/images/faculty/mohanjit-kang.jpeg" alt="Faculty 2"
               class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
-            <h3 class="text-xl font-semibold text-blue-700">Er. Harminder Kaur</h3>
+            <h3 class="text-xl font-semibold text-blue-700">Dr. Mohanjit Kaur Kang</h3>
             <!-- <p class="text-gray-600">Faculty Mentor</p> -->
             <p class="text-gray-500 text-sm mt-2">Faculty Incharge</p>
           </div>
